# spotify_mcp_server

./: .cache  .gitignore  main.py  pyproject.toml  test_response.py
src/: auth.py
src/tools/: album_tools.py  playback_tools.py  playlist_tools.py  search_tools.py  user_tools.py
